--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .auth-form {
+    @apply mb-3;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .auth-form label {
+    @apply text-base font-medium text-gray-700 cursor-text;
+  }
+  .auth-form input {
+    @apply w-full px-3 py-2 mt-1 border-2 rounded-md outline-none text-sm;
+  }
+  .auth-form > .input-container {
+    @apply my-2;
   }
 }
